[gd_scene load_steps=2 format=3 uid="uid://f0yxp1qwxm7zjn"]

[ext_resource type="Script" path="res://src/investigation/Interrogation.gd" id="1_interrogation"]

[node name="Interrogation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_interrogation")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Interrogation"
horizontal_alignment = 1

[node name="SubjectPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 100.0
offset_right = -40.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="SubjectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SubjectPanel/MarginContainer"]
layout_mode = 2

[node name="SubjectLabel" type="Label" parent="SubjectPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Subject: Minister"

[node name="ContextLabel" type="Label" parent="SubjectPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Context: Discrepancy in official records"

[node name="QuestionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="QuestionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="QuestionLabel" type="Label" parent="QuestionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select your line of questioning:"

[node name="QuestionList" type="VBoxContainer" parent="QuestionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ResponsePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ResponsePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ResponsePanel/MarginContainer"]
layout_mode = 2

[node name="ResponseLabel" type="Label" parent="ResponsePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Response:"

[node name="ResponseText" type="RichTextLabel" parent="ResponsePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "The subject's response will appear here..."
fit_content = true

[node name="ControlPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueButton" type="Button" parent="ControlPanel"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Continue"

[node name="BackButton" type="Button" parent="ControlPanel"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="ControlPanel/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ControlPanel/BackButton" to="." method="_on_back_pressed"]
